--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    /><script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   </head>
 
   <body>
